--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,8 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="css/icon-font.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <!-- <link rel="stylesheet" href="./css/icon-font.css" /> -->
+    <link rel="stylesheet" href="./sass/main.scss" />
     <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
 
     <title>Natours | Exciting tours for adventurous people</title>
@@ -25,6 +25,7 @@
           <span class="heading-primary--main">Outdoors</span>
           <span class="heading-primary--sub">is where life happens</span>
         </h1>
+        <button class="btn btn-white">Discover Tours</button>
       </div>
     </header>
   </body>
